[tool.poetry]
name = "model-dashboard"
version = "0.1.0"
description = ""
authors = ["Akash <akash.iitr17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"
blinker = "1.6.2"
click = "8.1.3"
cython = "0.29.34"
dash = "2.9.3"
dash-bootstrap-components = "1.4.1"
dash-core-components = "2.0.0"
dash-html-components = "2.0.0"
dash-table = "5.0.0"
flask = "2.2.5"
importlib-metadata = "6.6.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
joblib = "1.2.0"
markupsafe = "2.1.2"
numpy = "1.21.6"
packaging = "23.1"
pandas = "1.3.5"
patsy = "0.5.3"
plotly = "5.14.1"
pmdarima = "2.0.3"
python-dateutil = "2.8.2"
pytz = "2023.3"
scikit-learn = "1.0.2"
scipy = "1.7.3"
six = "1.16.0"
statsmodels = "0.13.5"
tenacity = "8.2.2"
threadpoolctl = "3.1.0"
tzdata = "2023.3"
urllib3 = "2.0.2"
werkzeug = "2.2.3"
zipp = "3.15.0"
gunicorn = "^22.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
